--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,6 @@
 [workspace]
 resolver = "3"
 members = ["bindings", "app/src-tauri"]
+
+[workspace.dependencies]
+rusty-contoso-passkeys-bindings = { path = "bindings" }
