A bit more work

--- a/bindings/Cargo.toml
+++ b/bindings/Cargo.toml
@@ -9,7 +9,8 @@ version = "0.61.2"
 [dependencies.windows]
 version = "0.61.3"
 features = [
-    "Win32_System_Com"
+    "Win32_System_Com",
+    "Win32_System_LibraryLoader",
 ]
 
 [build-dependencies.windows-bindgen]
@@ -17,3 +18,6 @@ version = "0.62.1"
 
 [dependencies.windows-link]
 version = "0.1"
+
+[dependencies.windows-strings]
+version = "0.4.2"
