A bit of work with some new binding infra, move to yarn

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,9 @@
 [workspace]
 resolver = "3"
-members = ["bindings", "app/src-tauri"]
+members = ["bindings", "app/src-tauri", "gen-bindings"]
 
 [workspace.dependencies]
 rusty-contoso-passkeys-bindings = { path = "bindings" }
+
+[patch.crates-io]
+windows-bindgen = { path = "../windows-rs/crates/libs/bindgen" }
