--- a/bindings/Cargo.toml
+++ b/bindings/Cargo.toml
@@ -13,8 +13,8 @@ features = [
     "Win32_System_LibraryLoader",
 ]
 
-[build-dependencies.windows-bindgen]
-version = "0.62.1"
+[dependencies.windows-sys]
+version = "0.60.2"
 
 [dependencies.windows-link]
 version = "0.1"
